feat: capture in-game chat via screen OCR sidecar and exit alert after valorant is closed.